src/cplus2asp.bin/parser.output
Terminals unused in grammar

   T_STRING
   T_ASP
   T_COMMENT
   T_INCLUDE
   T_MACROS
   T_ARROW_LDASH
   T_ARROW_REQ
   T_ARROW_LEQ
   T_ARROW_RDASH
   T_DBL_AMP
   T_POUND


State 28 conflicts: 3 shift/reduce
State 91 conflicts: 5 shift/reduce
State 106 conflicts: 1 shift/reduce
State 107 conflicts: 1 shift/reduce
State 287 conflicts: 1 shift/reduce
State 289 conflicts: 1 shift/reduce
State 297 conflicts: 1 shift/reduce
State 299 conflicts: 1 shift/reduce
State 300 conflicts: 1 shift/reduce
State 315 conflicts: 1 shift/reduce
State 316 conflicts: 1 shift/reduce
State 340 conflicts: 1 shift/reduce
State 360 conflicts: 1 shift/reduce
State 475 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: /* empty */
    2        | statement_sequence

    3 statement_sequence: statement
    4                   | statement_sequence statement

    5 statement: constant_statement
    6          | maxadditive_statement
    7          | object_statement
    8          | query_statement
    9          | show_statement
   10          | sort_statement
   11          | variable_statement
   12          | causal_law
   13          | error T_PERIOD
   14          | T_NOOP

   15 constant_statement: T_COLON_DASH T_CONSTANTS constant_spec_outer_tuple T_PERIOD

   16 constant_spec_outer_tuple: constant_spec_tuple
   17                          | T_PAREN_L constant_spec_tuple T_PAREN_R

   18 constant_spec_tuple: constant_outer_spec
   19                    | constant_spec_outer_tuple T_SEMICOLON constant_outer_spec

   20 constant_outer_spec: constant_spec
   21                    | T_PAREN_L constant_spec T_PAREN_R

   22 constant_spec: constant_schema_outer_list T_DBL_COLON constant_outer_binder

   23 constant_schema_outer_list: constant_schema_list
   24                           | T_PAREN_L constant_schema_list T_PAREN_R

   25 constant_schema_list: constant_outer_schema
   26                     | constant_schema_outer_list T_COMMA constant_outer_schema

   27 constant_outer_schema: constant_schema
   28                      | T_PAREN_L constant_schema T_PAREN_R

   29 constant_schema: T_IDENTIFIER
   30                | T_IDENTIFIER T_PAREN_L sort_identifier_list T_PAREN_R

   31 constant_schema_nodecl: T_IDENTIFIER
   32                       | T_IDENTIFIER T_PAREN_L sort_identifier_list T_PAREN_R

   33 constant_outer_binder: constant_binder
   34                      | T_PAREN_L constant_binder T_PAREN_R

   35 constant_binder: sort_identifier_with_ab
   36                | sort_constant_name T_PAREN_L sort_identifier T_PAREN_R
   37                | T_ATTRIBUTE T_OF constant_schema_nodecl
   38                | T_ATTRIBUTE T_PAREN_L sort_identifier T_PAREN_R T_OF constant_schema_nodecl

   39 maxadditive_statement: T_COLON_DASH T_MAXADDITIVE T_DBL_COLON extended_integer_outer_expression T_PERIOD

   40 object_statement: T_COLON_DASH T_OBJECTS object_spec_outer_tuple T_PERIOD

   41 object_spec_outer_tuple: object_spec_tuple
   42                        | T_PAREN_L object_spec_tuple T_PAREN_R

   43 object_spec_tuple: object_outer_spec
   44                  | object_spec_outer_tuple T_SEMICOLON object_spec_outer_tuple

   45 object_outer_spec: object_spec
   46                  | T_PAREN_L object_spec T_PAREN_R

   47 object_spec: object_outer_schema_list T_DBL_COLON sort_outer_identifier

   48 object_outer_schema_list: object_schema_list
   49                         | T_PAREN_L object_schema_list T_PAREN_R

   50 object_schema_list: object_outer_schema
   51                   | object_outer_schema_list T_COMMA object_outer_schema

   52 object_outer_schema: object_schema
   53                    | T_PAREN_L object_schema T_PAREN_R

   54 object_schema: T_IDENTIFIER
   55              | T_IDENTIFIER T_PAREN_L sort_identifier_list T_PAREN_R
   56              | extended_integer_outer_expression
   57              | num_range

   58 show_statement: T_COLON_DASH T_SHOW atomic_formula_list T_PERIOD

   59 atomic_formula_list: atomic_formula
   60                    | atomic_formula_list T_SEMICOLON atomic_formula

   61 atomic_formula: constant_expr
   62               | constant_expr T_EQ extended_value_expression

   63 sort_statement: T_COLON_DASH T_SORTS sort_spec_outer_tuple T_PERIOD

   64 sort_spec_outer_tuple: sort_spec_tuple
   65                      | T_PAREN_L sort_spec_tuple T_PAREN_R

   66 sort_spec_tuple: sort_spec
   67                | sort_spec_outer_tuple T_SEMICOLON sort_spec_outer_tuple

   68 sort_spec: sort_identifier_no_range
   69          | sort_identifier_no_range T_DBL_GTHAN sort_spec_outer_tuple

   70 sort_identifier_with_ab: sort_outer_identifier
   71                        | T_STATICAB
   72                        | T_DYNAMICAB

   73 sort_outer_identifier: sort_identifier
   74                      | T_PAREN_L sort_identifier T_PAREN_R

   75 sort_identifier: sort_identifier_no_range
   76                | num_range

   77 sort_identifier_no_range: sort_identifier_name
   78                         | sort_identifier_name T_STAR
   79                         | sort_identifier_name T_PLUS T_NONE

   80 sort_identifier_name: T_IDENTIFIER
   81                     | sort_constant_name

   82 sort_constant_name: T_ABACTION
   83                   | T_ACTION
   84                   | T_ADDITIVEACTION
   85                   | T_ADDITIVEFLUENT
   86                   | T_EXOGENOUSACTION
   87                   | T_INERTIALFLUENT
   88                   | T_RIGID
   89                   | T_SDFLUENT
   90                   | T_SIMPLEFLUENT

   91 variable_statement: T_COLON_DASH T_VARIABLES variable_spec_outer_tuple T_PERIOD

   92 variable_spec_outer_tuple: variable_spec_tuple
   93                          | T_PAREN_L variable_spec_tuple T_PAREN_R

   94 variable_spec_tuple: variable_outer_spec
   95                    | variable_outer_spec T_SEMICOLON variable_spec_outer_tuple

   96 variable_outer_spec: variable_spec
   97                    | T_PAREN_L variable_spec T_PAREN_R

   98 variable_spec: variable_outer_list T_DBL_COLON variable_binding

   99 variable_outer_list: variable_list
  100                    | T_PAREN_L variable_list T_PAREN_R

  101 variable_list: T_IDENTIFIER
  102              | variable_list T_COMMA T_IDENTIFIER

  103 variable_binding: sort_outer_identifier

  104 cl_if_clause: /* empty */
  105             | T_IF cl_body_formula

  106 cl_assuming_clause: /* empty */
  107                   | T_ASSUMING cl_body_formula

  108 cl_after_clause: /* empty */
  109                | T_AFTER cl_body_formula

  110 cl_unless_clause: /* empty */
  111                 | T_UNLESS constant_expr

  112 cl_when_clause: /* empty */
  113               | T_WHEN cl_when_expr

  114 cl_following_clause: /* empty */
  115                    | T_FOLLOWING cl_following_expr

  116 cl_where_clause: /* empty */
  117                | T_WHERE cl_where_expr

  118 causal_law: causal_law_shortcut_forms T_PERIOD
  119           | causal_law_basic_forms T_PERIOD

  120 causal_law_shortcut_forms: cl_always_forms
  121                          | cl_constraint_forms
  122                          | cl_default_forms
  123                          | cl_exogenous_forms
  124                          | cl_inertial_forms
  125                          | cl_nonexecutable_forms
  126                          | cl_rigid_forms
  127                          | cl_possibly_caused_forms
  128                          | cl_may_cause_forms
  129                          | cl_causes_forms
  130                          | cl_noconcurrency_forms
  131                          | cl_increment_forms
  132                          | cl_trivial_forms

  133 cl_always_forms: T_ALWAYS cl_body_formula cl_when_clause cl_where_clause

  134 cl_constraint_forms: T_CONSTRAINT cl_body_formula cl_after_clause cl_unless_clause cl_when_clause cl_following_clause cl_where_clause
  135                    | T_IMPOSSIBLE cl_body_formula cl_after_clause cl_unless_clause cl_when_clause cl_following_clause cl_where_clause
  136                    | T_NEVER cl_body_formula cl_after_clause cl_unless_clause cl_when_clause cl_following_clause cl_where_clause

  137 cl_default_forms: T_DEFAULT cl_head_formula cl_if_clause cl_assuming_clause cl_after_clause cl_unless_clause cl_when_clause cl_following_clause cl_where_clause

  138 cl_exogenous_forms: T_EXOGENOUS constant_expr cl_where_clause

  139 cl_inertial_forms: T_INERTIAL constant_expr cl_where_clause

  140 cl_nonexecutable_forms: T_NONEXECUTABLE cl_body_formula cl_if_clause cl_when_clause cl_where_clause

  141 cl_rigid_forms: T_RIGID constant_expr cl_where_clause

  142 cl_possibly_caused_forms: T_POSSIBLY_CAUSED cl_head_formula cl_if_clause cl_assuming_clause cl_after_clause cl_unless_clause cl_when_clause cl_following_clause cl_where_clause

  143 cl_may_cause_forms: cl_body_formula T_MAY_CAUSE cl_head_formula cl_if_clause cl_when_clause cl_where_clause

  144 cl_causes_forms: cl_body_formula T_CAUSES cl_head_formula cl_if_clause cl_unless_clause cl_when_clause cl_where_clause

  145 cl_noconcurrency_forms: T_NOCONCURRENCY
  146                       | T_STRONG_NOCONCURRENCY

  147 cl_increment_forms: cl_body_formula T_INCREMENTS cl_head_formula T_BY extended_math_expression cl_if_clause cl_when_clause cl_where_clause
  148                   | cl_body_formula T_DECREMENTS cl_head_formula T_BY extended_math_expression cl_if_clause cl_when_clause cl_where_clause

  149 cl_trivial_forms: cl_body_formula cl_if_clause cl_assuming_clause cl_after_clause cl_unless_clause cl_when_clause cl_following_clause cl_where_clause

  150 causal_law_basic_forms: T_CAUSED cl_head_formula cl_if_clause cl_assuming_clause cl_after_clause cl_unless_clause cl_when_clause cl_following_clause cl_where_clause

  151 cl_head_formula: literal_assign_conj
  152                | T_TRUE
  153                | T_FALSE

  154 cl_body_formula: cl_body_formula_inner
  155                | T_PAREN_L cl_body_formula_inner T_PAREN_R

  156 cl_body_formula_inner: cl_body_term
  157                      | NOT cl_body_formula
  158                      | cl_body_formula AND cl_body_formula
  159                      | cl_body_formula T_DBL_PLUS cl_body_formula
  160                      | cl_body_formula T_EQUIV cl_body_formula
  161                      | cl_body_formula T_IMPL cl_body_formula

  162 cl_body_term: cl_body_term_inner
  163             | T_PAREN_L cl_body_term_inner T_PAREN_R

  164 cl_body_term_inner: extended_value_expression
  165                   | extended_value_expression T_EQ extended_value_expression
  166                   | extended_value_expression T_NOT_EQ extended_value_expression
  167                   | extended_value_expression COMPARISON extended_value_expression
  168                   | expr_big_expression

  169 cl_where_expr: cl_body_formula

  170 cl_when_expr: cl_body_formula_bool

  171 cl_following_expr: cl_body_formula_bool

  172 cl_body_formula_bool: cl_body_formula_bool_inner
  173                     | T_PAREN_L cl_body_formula_bool_inner T_PAREN_R

  174 cl_body_formula_bool_inner: cl_body_term_bool
  175                           | NOT cl_body_formula_bool
  176                           | cl_body_formula_bool AND cl_body_formula_bool
  177                           | cl_body_formula_bool T_DBL_PLUS cl_body_formula_bool
  178                           | cl_body_formula_bool T_EQUIV cl_body_formula_bool
  179                           | cl_body_formula_bool T_IMPL cl_body_formula_bool

  180 cl_body_term_bool: cl_body_term_bool_inner
  181                  | T_PAREN_L cl_body_term_bool_inner T_PAREN_R

  182 cl_body_term_bool_inner: constant_expr
  183                        | expr_big_expression_bool

  184 literal_assign_conj: literal_assign_conj_inner
  185                    | T_PAREN_L literal_assign_conj_inner T_PAREN_R

  186 literal_assign_conj_inner: literal_assign_expr
  187                          | literal_assign_conj AND literal_assign_conj

  188 literal_assign_expr: constant_expr
  189                    | NOT constant_expr
  190                    | constant_expr T_EQ extended_value_expression

  191 expr_big_expression: T_BRACKET_L expr_big_quantifiers T_PIPE cl_body_formula T_BRACKET_R

  192 expr_big_expression_bool: T_BRACKET_L expr_big_quantifiers T_PIPE cl_body_formula_bool T_BRACKET_R

  193 expr_big_quantifiers: expr_big_conj
  194                     | expr_big_disj
  195                     | expr_big_quantifiers expr_big_conj
  196                     | expr_big_quantifiers expr_big_disj

  197 expr_big_conj: T_BIG_CONJ T_IDENTIFIER

  198 expr_big_disj: T_BIG_DISJ T_IDENTIFIER

  199 query_statement: T_COLON_DASH T_QUERY query_expression_tuple T_PERIOD

  200 query_expression_tuple: query_expression
  201                       | query_expression_tuple T_SEMICOLON query_expression_tuple

  202 query_expression: T_LABEL T_DBL_COLON T_INTEGER
  203                 | T_MAXSTEP T_DBL_COLON num_range
  204                 | T_MAXSTEP T_DBL_COLON extended_integer
  205                 | query_body_formula

  206 query_body_formula: query_body_formula_inner
  207                   | T_PAREN_L query_body_formula T_PAREN_R
  208                   | extended_math_expr_inner T_COLON query_body_formula

  209 query_body_formula_inner: query_body_term
  210                         | NOT query_body_formula
  211                         | query_body_formula AND query_body_formula
  212                         | query_body_formula T_DBL_PLUS query_body_formula
  213                         | query_body_formula T_EQUIV query_body_formula
  214                         | query_body_formula T_IMPL query_body_formula

  215 query_body_term: query_body_term_inner
  216                | T_PAREN_L query_body_term_inner T_PAREN_R

  217 query_body_term_inner: extended_value_expression
  218                      | extended_value_expression T_EQ extended_value_expression
  219                      | extended_value_expression T_NOT_EQ extended_value_expression
  220                      | extended_value_expression COMPARISON extended_value_expression
  221                      | expr_big_query_expression

  222 expr_big_query_expression: T_BRACKET_L expr_big_quantifiers T_PIPE query_body_formula T_BRACKET_R

  223 constant_expr: lua_indicator T_IDENTIFIER
  224              | lua_indicator T_IDENTIFIER T_PAREN_L parameter_list T_PAREN_R

  225 lua_indicator: /* empty */
  226              | T_AT

  227 parameter_list: parameter_general
  228               | parameter_list T_COMMA parameter_general

  229 parameter_general: extended_value_expression

  230 sort_identifier_list: sort_identifier
  231                     | sort_identifier_list T_COMMA sort_identifier

  232 extended_value_expression: T_TRUE
  233                          | T_FALSE
  234                          | T_NONE
  235                          | extended_math_expression

  236 extended_math_expression: extended_math_expr_inner
  237                         | T_PAREN_L extended_math_expr_inner T_PAREN_R

  238 extended_math_expr_inner: extended_math_term
  239                         | extended_math_expression T_PLUS extended_math_expression
  240                         | extended_math_expression T_DASH extended_math_expression
  241                         | extended_math_expression T_STAR extended_math_expression
  242                         | extended_math_expression T_INT_DIV extended_math_expression
  243                         | extended_math_expression T_MOD extended_math_expression
  244                         | T_ABS extended_math_expression
  245                         | T_ABS T_PAREN_L extended_math_expression T_PAREN_R

  246 extended_math_term: extended_integer
  247                   | constant_expr

  248 num_range: extended_integer_outer_expression T_DBL_PERIOD extended_integer_outer_expression

  249 extended_integer: T_INTEGER
  250                 | T_MAXADDITIVE
  251                 | T_MAXSTEP
  252                 | T_DASH extended_integer

  253 extended_integer_outer_expression: extended_integer_expression
  254                                  | T_PAREN_L extended_integer_expression T_PAREN_R

  255 extended_integer_expression: extended_integer
  256                            | extended_integer_outer_expression T_PLUS extended_integer_outer_expression
  257                            | extended_integer_outer_expression T_DASH extended_integer_outer_expression
  258                            | extended_integer_outer_expression T_STAR extended_integer_outer_expression
  259                            | extended_integer_outer_expression T_INT_DIV extended_integer_outer_expression
  260                            | extended_integer_outer_expression T_MOD extended_integer_outer_expression

  261 AND: T_AMP
  262    | T_COMMA

  263 NOT: T_DASH
  264    | T_NOT

  265 COMPARISON: T_DBL_EQ
  266           | T_EQ_LTHAN
  267           | T_GTHAN_EQ
  268           | T_LTHAN
  269           | T_GTHAN


Terminals, with rules where they appear

"end of file" (0) 0
error (256) 13
T_INTEGER (258) 202 249
T_IDENTIFIER (259) 29 30 31 32 54 55 80 101 102 197 198 223 224
T_STRING (260)
T_ASP (261)
T_COMMENT (262)
T_CONSTANTS (263) 15
T_INCLUDE (264)
T_MACROS (265)
T_OBJECTS (266) 40
T_QUERY (267) 199
T_SHOW (268) 58
T_SORTS (269) 63
T_VARIABLES (270) 91
T_ABACTION (271) 82
T_ACTION (272) 83
T_ADDITIVEACTION (273) 84
T_ADDITIVEFLUENT (274) 85
T_AFTER (275) 109
T_ALWAYS (276) 133
T_ASSUMING (277) 107
T_ATTRIBUTE (278) 37 38
T_BY (279) 147 148
T_CAUSED (280) 150
T_CAUSES (281) 144
T_IMPOSSIBLE (282) 135
T_CONSTRAINT (283) 134
T_DECREMENTS (284) 148
T_DEFAULT (285) 137
T_DYNAMICAB (286) 72
T_EXOGENOUS (287) 138
T_EXOGENOUSACTION (288) 86
T_IF (289) 105
T_INCREMENTS (290) 147
T_INERTIAL (291) 139
T_INERTIALFLUENT (292) 87
T_LABEL (293) 202
T_MAY_CAUSE (294) 143
T_MAXADDITIVE (295) 39 250
T_MAXSTEP (296) 203 204 251
T_NEVER (297) 136
T_NOCONCURRENCY (298) 145
T_STRONG_NOCONCURRENCY (299) 146
T_NONEXECUTABLE (300) 140
T_OF (301) 37 38
T_POSSIBLY_CAUSED (302) 142
T_RIGID (303) 88 141
T_SDFLUENT (304) 89
T_SIMPLEFLUENT (305) 90
T_STATICAB (306) 71
T_UNLESS (307) 111
T_WHEN (308) 113
T_FOLLOWING (309) 115
T_WHERE (310) 117
T_FALSE (311) 153 233
T_NONE (312) 79 234
T_TRUE (313) 152 232
T_ABS (314) 244 245
T_AT (315) 226
T_BRACKET_L (316) 191 192 222
T_BRACKET_R (317) 191 192 222
T_COLON_DASH (318) 15 39 40 58 63 91 199
T_PAREN_L (319) 17 21 24 28 30 32 34 36 38 42 46 49 53 55 65 74 93
    97 100 155 163 173 181 185 207 216 224 237 245 254
T_PAREN_R (320) 17 21 24 28 30 32 34 36 38 42 46 49 53 55 65 74 93
    97 100 155 163 173 181 185 207 216 224 237 245 254
T_PERIOD (321) 13 15 39 40 58 63 91 118 119 199
T_PIPE (322) 191 192 222
T_NOOP (323) 14
T_SEMICOLON (324) 19 44 60 67 95 201
T_DBL_COLON (325) 22 39 47 98 202 203 204
T_ARROW_LDASH (326)
T_ARROW_REQ (327)
T_ARROW_LEQ (328)
T_ARROW_RDASH (329)
T_COLON (330) 208
T_COMMA (331) 26 51 102 228 231 262
T_EQUIV (332) 160 178 213
T_IMPL (333) 161 179 214
T_DBL_PLUS (334) 159 177 212
T_DBL_AMP (335)
T_AMP (336) 261
T_EQ (337) 62 165 190 218
T_GTHAN_EQ (338) 267
T_EQ_LTHAN (339) 266
T_GTHAN (340) 269
T_LTHAN (341) 268
T_NOT_EQ (342) 166 219
T_DBL_EQ (343) 265
T_NOT (344) 264
T_DBL_PERIOD (345) 248
T_PLUS (346) 79 239 256
T_DASH (347) 240 252 257 263
T_DBL_GTHAN (348) 69
T_MOD (349) 243 260
T_INT_DIV (350) 242 259
T_STAR (351) 78 241 258
T_BIG_CONJ (352) 197
T_BIG_DISJ (353) 198
T_POUND (354)
T_UMINUS (355)


Nonterminals, with rules where they appear

$accept (101)
    on left: 0
program (102)
    on left: 1 2, on right: 0
statement_sequence (103)
    on left: 3 4, on right: 2 4
statement (104)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 3 4
constant_statement (105)
    on left: 15, on right: 5
constant_spec_outer_tuple (106)
    on left: 16 17, on right: 15 19
constant_spec_tuple (107)
    on left: 18 19, on right: 16 17
constant_outer_spec (108)
    on left: 20 21, on right: 18 19
constant_spec (109)
    on left: 22, on right: 20 21
constant_schema_outer_list (110)
    on left: 23 24, on right: 22 26
constant_schema_list (111)
    on left: 25 26, on right: 23 24
constant_outer_schema (112)
    on left: 27 28, on right: 25 26
constant_schema (113)
    on left: 29 30, on right: 27 28
constant_schema_nodecl (114)
    on left: 31 32, on right: 37 38
constant_outer_binder (115)
    on left: 33 34, on right: 22
constant_binder (116)
    on left: 35 36 37 38, on right: 33 34
maxadditive_statement (117)
    on left: 39, on right: 6
object_statement (118)
    on left: 40, on right: 7
object_spec_outer_tuple (119)
    on left: 41 42, on right: 40 44
object_spec_tuple (120)
    on left: 43 44, on right: 41 42
object_outer_spec (121)
    on left: 45 46, on right: 43
object_spec (122)
    on left: 47, on right: 45 46
object_outer_schema_list (123)
    on left: 48 49, on right: 47 51
object_schema_list (124)
    on left: 50 51, on right: 48 49
object_outer_schema (125)
    on left: 52 53, on right: 50 51
object_schema (126)
    on left: 54 55 56 57, on right: 52 53
show_statement (127)
    on left: 58, on right: 9
atomic_formula_list (128)
    on left: 59 60, on right: 58 60
atomic_formula (129)
    on left: 61 62, on right: 59 60
sort_statement (130)
    on left: 63, on right: 10
sort_spec_outer_tuple (131)
    on left: 64 65, on right: 63 67 69
sort_spec_tuple (132)
    on left: 66 67, on right: 64 65
sort_spec (133)
    on left: 68 69, on right: 66
sort_identifier_with_ab (134)
    on left: 70 71 72, on right: 35
sort_outer_identifier (135)
    on left: 73 74, on right: 47 70 103
sort_identifier (136)
    on left: 75 76, on right: 36 38 73 74 230 231
sort_identifier_no_range (137)
    on left: 77 78 79, on right: 68 69 75
sort_identifier_name (138)
    on left: 80 81, on right: 77 78 79
sort_constant_name (139)
    on left: 82 83 84 85 86 87 88 89 90, on right: 36 81
variable_statement (140)
    on left: 91, on right: 11
variable_spec_outer_tuple (141)
    on left: 92 93, on right: 91 95
variable_spec_tuple (142)
    on left: 94 95, on right: 92 93
variable_outer_spec (143)
    on left: 96 97, on right: 94 95
variable_spec (144)
    on left: 98, on right: 96 97
variable_outer_list (145)
    on left: 99 100, on right: 98
variable_list (146)
    on left: 101 102, on right: 99 100 102
variable_binding (147)
    on left: 103, on right: 98
cl_if_clause (148)
    on left: 104 105, on right: 137 140 142 143 144 147 148 149 150
cl_assuming_clause (149)
    on left: 106 107, on right: 137 142 149 150
cl_after_clause (150)
    on left: 108 109, on right: 134 135 136 137 142 149 150
cl_unless_clause (151)
    on left: 110 111, on right: 134 135 136 137 142 144 149 150
cl_when_clause (152)
    on left: 112 113, on right: 133 134 135 136 137 140 142 143 144
    147 148 149 150
cl_following_clause (153)
    on left: 114 115, on right: 134 135 136 137 142 149 150
cl_where_clause (154)
    on left: 116 117, on right: 133 134 135 136 137 138 139 140 141
    142 143 144 147 148 149 150
causal_law (155)
    on left: 118 119, on right: 12
causal_law_shortcut_forms (156)
    on left: 120 121 122 123 124 125 126 127 128 129 130 131 132, on right:
    118
cl_always_forms (157)
    on left: 133, on right: 120
cl_constraint_forms (158)
    on left: 134 135 136, on right: 121
cl_default_forms (159)
    on left: 137, on right: 122
cl_exogenous_forms (160)
    on left: 138, on right: 123
cl_inertial_forms (161)
    on left: 139, on right: 124
cl_nonexecutable_forms (162)
    on left: 140, on right: 125
cl_rigid_forms (163)
    on left: 141, on right: 126
cl_possibly_caused_forms (164)
    on left: 142, on right: 127
cl_may_cause_forms (165)
    on left: 143, on right: 128
cl_causes_forms (166)
    on left: 144, on right: 129
cl_noconcurrency_forms (167)
    on left: 145 146, on right: 130
cl_increment_forms (168)
    on left: 147 148, on right: 131
cl_trivial_forms (169)
    on left: 149, on right: 132
causal_law_basic_forms (170)
    on left: 150, on right: 119
cl_head_formula (171)
    on left: 151 152 153, on right: 137 142 143 144 147 148 150
cl_body_formula (172)
    on left: 154 155, on right: 105 107 109 133 134 135 136 140 143
    144 147 148 149 157 158 159 160 161 169 191
cl_body_formula_inner (173)
    on left: 156 157 158 159 160 161, on right: 154 155
cl_body_term (174)
    on left: 162 163, on right: 156
cl_body_term_inner (175)
    on left: 164 165 166 167 168, on right: 162 163
cl_where_expr (176)
    on left: 169, on right: 117
cl_when_expr (177)
    on left: 170, on right: 113
cl_following_expr (178)
    on left: 171, on right: 115
cl_body_formula_bool (179)
    on left: 172 173, on right: 170 171 175 176 177 178 179 192
cl_body_formula_bool_inner (180)
    on left: 174 175 176 177 178 179, on right: 172 173
cl_body_term_bool (181)
    on left: 180 181, on right: 174
cl_body_term_bool_inner (182)
    on left: 182 183, on right: 180 181
literal_assign_conj (183)
    on left: 184 185, on right: 151 187
literal_assign_conj_inner (184)
    on left: 186 187, on right: 184 185
literal_assign_expr (185)
    on left: 188 189 190, on right: 186
expr_big_expression (186)
    on left: 191, on right: 168
expr_big_expression_bool (187)
    on left: 192, on right: 183
expr_big_quantifiers (188)
    on left: 193 194 195 196, on right: 191 192 195 196 222
expr_big_conj (189)
    on left: 197, on right: 193 195
expr_big_disj (190)
    on left: 198, on right: 194 196
query_statement (191)
    on left: 199, on right: 8
query_expression_tuple (192)
    on left: 200 201, on right: 199 201
query_expression (193)
    on left: 202 203 204 205, on right: 200
query_body_formula (194)
    on left: 206 207 208, on right: 205 207 208 210 211 212 213 214
    222
query_body_formula_inner (195)
    on left: 209 210 211 212 213 214, on right: 206
query_body_term (196)
    on left: 215 216, on right: 209
query_body_term_inner (197)
    on left: 217 218 219 220 221, on right: 215 216
expr_big_query_expression (198)
    on left: 222, on right: 221
constant_expr (199)
    on left: 223 224, on right: 61 62 111 138 139 141 182 188 189 190
    247
lua_indicator (200)
    on left: 225 226, on right: 223 224
parameter_list (201)
    on left: 227 228, on right: 224 228
parameter_general (202)
    on left: 229, on right: 227 228
sort_identifier_list (203)
    on left: 230 231, on right: 30 32 55 231
extended_value_expression (204)
    on left: 232 233 234 235, on right: 62 164 165 166 167 190 217
    218 219 220 229
extended_math_expression (205)
    on left: 236 237, on right: 147 148 235 239 240 241 242 243 244
    245
extended_math_expr_inner (206)
    on left: 238 239 240 241 242 243 244 245, on right: 208 236 237
extended_math_term (207)
    on left: 246 247, on right: 238
num_range (208)
    on left: 248, on right: 57 76 203
extended_integer (209)
    on left: 249 250 251 252, on right: 204 246 252 255
extended_integer_outer_expression (210)
    on left: 253 254, on right: 39 56 248 256 257 258 259 260
extended_integer_expression (211)
    on left: 255 256 257 258 259 260, on right: 253 254
AND (212)
    on left: 261 262, on right: 158 176 187 211
NOT (213)
    on left: 263 264, on right: 157 175 189 210
COMPARISON (214)
    on left: 265 266 267 268 269, on right: 167 220


state 0

    0 $accept: . program "end of file"

    error                   shift, and go to state 1
    T_INTEGER               shift, and go to state 2
    T_ALWAYS                shift, and go to state 3
    T_CAUSED                shift, and go to state 4
    T_IMPOSSIBLE            shift, and go to state 5
    T_CONSTRAINT            shift, and go to state 6
    T_DEFAULT               shift, and go to state 7
    T_EXOGENOUS             shift, and go to state 8
    T_INERTIAL              shift, and go to state 9
    T_MAXADDITIVE           shift, and go to state 10
    T_MAXSTEP               shift, and go to state 11
    T_NEVER                 shift, and go to state 12
    T_NOCONCURRENCY         shift, and go to state 13
    T_STRONG_NOCONCURRENCY  shift, and go to state 14
    T_NONEXECUTABLE         shift, and go to state 15
    T_POSSIBLY_CAUSED       shift, and go to state 16
    T_RIGID                 shift, and go to state 17
    T_FALSE                 shift, and go to state 18
    T_NONE                  shift, and go to state 19
    T_TRUE                  shift, and go to state 20
    T_ABS                   shift, and go to state 21
    T_AT                    shift, and go to state 22
    T_BRACKET_L             shift, and go to state 23
    T_COLON_DASH            shift, and go to state 24
    T_PAREN_L               shift, and go to state 25
    T_NOOP                  shift, and go to state 26
    T_NOT                   shift, and go to state 27
    T_DASH                  shift, and go to state 28

    "end of file"  reduce using rule 1 (program)
    T_IDENTIFIER   reduce using rule 225 (lua_indicator)

    program                    go to state 29
    statement_sequence         go to state 30
    statement                  go to state 31
    constant_statement         go to state 32
    maxadditive_statement      go to state 33
    object_statement           go to state 34
    show_statement             go to state 35
    sort_statement             go to state 36
    variable_statement         go to state 37
    causal_law                 go to state 38
    causal_law_shortcut_forms  go to state 39
    cl_always_forms            go to state 40
    cl_constraint_forms        go to state 41
    cl_default_forms           go to state 42
    cl_exogenous_forms         go to state 43
    cl_inertial_forms          go to state 44
    cl_nonexecutable_forms     go to state 45
    cl_rigid_forms             go to state 46
    cl_possibly_caused_forms   go to state 47
    cl_may_cause_forms         go to state 48
    cl_causes_forms            go to state 49
    cl_noconcurrency_forms     go to state 50
    cl_increment_forms         go to state 51
    cl_trivial_forms           go to state 52
    causal_law_basic_forms     go to state 53
    cl_body_formula            go to state 54
    cl_body_formula_inner      go to state 55
    cl_body_term               go to state 56
    cl_body_term_inner         go to state 57
    expr_big_expression        go to state 58
    query_statement            go to state 59
    constant_expr              go to state 60
    lua_indicator              go to state 61
    extended_value_expression  go to state 62
    extended_math_expression   go to state 63
    extended_math_expr_inner   go to state 64
    extended_math_term         go to state 65
    extended_integer           go to state 66
    NOT                        go to state 67


state 1

   13 statement: error . T_PERIOD

    T_PERIOD  shift, and go to state 68


state 2

  249 extended_integer: T_INTEGER .

    $default  reduce using rule 249 (extended_integer)


state 3

  133 cl_always_forms: T_ALWAYS . cl_body_formula cl_when_clause cl_where_clause

    T_INTEGER      shift, and go to state 2
    T_MAXADDITIVE  shift, and go to state 10
    T_MAXSTEP      shift, and go to state 11
    T_FALSE        shift, and go to state 18
    T_NONE         shift, and go to state 19
    T_TRUE         shift, and go to state 20
    T_ABS          shift, and go to state 21
    T_AT           shift, and go to state 22
    T_BRACKET_L    shift, and go to state 23
    T_PAREN_L      shift, and go to state 25
    T_NOT          shift, and go to state 27
    T_DASH         shift, and go to state 28

    $default  reduce using rule 225 (lua_indicator)

    cl_body_formula            go to state 69
    cl_body_formula_inner      go to state 55
    cl_body_term               go to state 56
    cl_body_term_inner         go to state 57
    expr_big_expression        go to state 58
    constant_expr              go to state 60
    lua_indicator              go to state 61
    extended_value_expression  go to state 62
    extended_math_expression   go to state 63
    extended_math_expr_inner   go to state 64
    extended_math_term         go to state 65
    extended_integer           go to state 66
    NOT                        go to state 67


state 4

  150 causal_law_basic_forms: T_CAUSED . cl_head_formula cl_if_clause cl_assuming_clause cl_after_clause cl_unless_clause cl_when_clause cl_following_clause cl_where_clause

    T_FALSE    shift, and go to state 70
    T_TRUE     shift, and go to state 71
    T_AT       shift, and go to state 22
    T_PAREN_L  shift, and go to state 72
    T_NOT      shift, and go to state 27
    T_DASH     shift, and go to state 73

    $default  reduce using rule 225 (lua_indicator)

    cl_head_formula            go to state 74
    literal_assign_conj        go to state 75
    literal_assign_conj_inner  go to state 76
    literal_assign_expr        go to state 77
    constant_expr              go to state 78
    lua_indicator              go to state 61
    NOT                        go to state 79


state 5

  135 cl_constraint_forms: T_IMPOSSIBLE . cl_body_formula cl_after_clause cl_unless_clause cl_when_clause cl_following_clause cl_where_clause

    T_INTEGER      shift, and go to state 2
    T_MAXADDITIVE  shift, and go to state 10
    T_MAXSTEP      shift, and go to state 11
    T_FALSE        shift, and go to state 18
    T_NONE         shift, and go to state 19
    T_TRUE         shift, and go to state 20
    T_ABS          shift, and go to state 21
    T_AT           shift, and go to state 22
    T_BRACKET_L    shift, and go to state 23
    T_PAREN_L      shift, and go to state 25
    T_NOT          shift, and go to state 27
    T_DASH         shift, and go to state 28

    $default  reduce using rule 225 (lua_indicator)
